# rust-shazam

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/fingerprinting/: algorithm.rs  communication.rs  hanning.rs  signature_format.rs
src/utils/: ffmpeg_wrapper.rs
