[package]
name = "shazamrs"
license = "GPL-3.0+"
description = "A library for audio matching."
homepage = "https://github.com/marin-m/SongRec"
repository = "https://github.com/marin-m/SongRec"
readme = "README.md"
keywords = ["shazam", "audio", "audio-fingerprinting"]
categories = ["multimedia::audio", "command-line-utilities"]
version = "0.3.2"
authors = ["marin-m", "Tibor-S"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chfft = "0.3.4" # Fast Fourier transform
byteorder = "1.3.4" # Used for reading and writing binary structures
crc32fast = "1.2.0" # Used for the CRC-32 checksum in the binary signature
base64 = "0.12.3"
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
rodio = "0.13.1" # For reading WAV/MP3/FLAG/OGG files, resampling and playing audio.
serde_json = "1.0.57" # For decoding and encoding JSON
uuid = { version = "0.8.1", features = ["v4"] }
rand = "0.7.3"
tempfile = "3.2.0"
thiserror = "1.0.48"

